--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,5 @@
-<html>
-<head>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="http://js.leapmotion.com/0.2.2/leap.min.js"></script>
-  <script src="js/wordSearch.js" type="text/javascript"></script>
-  <script src="js/grid.js" type="text/javascript"></script>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+{% extends "layout.html" %}
+{% block body %}
 <body onload="init()">
   <div class="grid">
     <div id="d0_0"></div>
@@ -37,4 +30,4 @@
     <p id="insert"></p>
   </div>
 </body>
-</html>
+{% endblock %}
